compiler/toyc-ast/tests/snapshots/syntax__main@empty.toy.snap
---
source: compiler/toyc-ast/tests/syntax.rs
assertion_line: 9
expression: "ast::parse::file().parse_recovery(tokens)"

---
(
    Some(
        File {
            attrs: [],
            items: [],
            span: Span {
                lo: 0,
                hi: 0,
            },
        },
    ),
    [],
)
