compiler/toyc-ast/tests/snapshots/syntax__main@extern.toy.snap
---
source: compiler/toyc-ast/tests/syntax.rs
assertion_line: 8
expression: "ast::parse::file().parse_recovery(tokens)"

---
(
    Some(
        File {
            attrs: [],
            items: [
                Item {
                    attrs: [],
                    vis: None,
                    item_kind: Function(
                        Function {
                            extern_: Some(
                                "C",
                            ),
                            const_: false,
                            unsafe_: false,
                            ident: answer @ 14..20,
                            generic_params: None,
                            params: [],
                            return_type: Some(
                                Type {
                                    modifier: None,
                                    mutable: false,
                                    path: [
                                        Segment {
                                            ident: i8 @ 26..28,
                                            generics: None,
                                            span: Span {
                                                lo: 26,
                                                hi: 28,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        lo: 26,
                                        hi: 28,
                                    },
                                },
                            ),
                            body: Some(
                                Expr {
                                    primary: CodeBlock(
                                        CodeBlock {
                                            statements: [],
                                            trailing: Some(
                                                Expr {
                                                    primary: Literal(
                                                        NumLit(
                                                            NumLit {
                                                                prefix: None,
                                                                val: 42,
                                                                decimal: None,
                                                                ty: None,
                                                                span: Span {
                                                                    lo: 32,
                                                                    hi: 34,
                                                                },
                                                            },
                                                        ),
                                                    ),
                                                    args: None,
                                                    span: Span {
                                                        lo: 32,
                                                        hi: 34,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                lo: 32,
                                                hi: 34,
                                            },
                                        },
                                    ),
                                    args: None,
                                    span: Span {
                                        lo: 30,
                                        hi: 36,
                                    },
                                },
                            ),
                            span: Span {
                                lo: 0,
                                hi: 36,
                            },
                        },
                    ),
                    span: Span {
                        lo: 0,
                        hi: 36,
                    },
                },
                Item {
                    attrs: [],
                    vis: None,
                    item_kind: Function(
                        Function {
                            extern_: Some(
                                "C",
                            ),
                            const_: false,
                            unsafe_: false,
                            ident: ping @ 52..56,
                            generic_params: None,
                            params: [],
                            return_type: Some(
                                Type {
                                    modifier: None,
                                    mutable: false,
                                    path: [
                                        Segment {
                                            ident: usize @ 62..67,
                                            generics: None,
                                            span: Span {
                                                lo: 62,
                                                hi: 67,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        lo: 62,
                                        hi: 67,
                                    },
                                },
                            ),
                            body: Some(
                                Expr {
                                    primary: CodeBlock(
                                        CodeBlock {
                                            statements: [],
                                            trailing: Some(
                                                Expr {
                                                    primary: Ident(
                                                        ping @ 71..75,
                                                    ),
                                                    args: Some(
                                                        [],
                                                    ),
                                                    span: Span {
                                                        lo: 71,
                                                        hi: 77,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                lo: 71,
                                                hi: 77,
                                            },
                                        },
                                    ),
                                    args: None,
                                    span: Span {
                                        lo: 69,
                                        hi: 79,
                                    },
                                },
                            ),
                            span: Span {
                                lo: 38,
                                hi: 79,
                            },
                        },
                    ),
                    span: Span {
                        lo: 38,
                        hi: 79,
                    },
                },
                Item {
                    attrs: [],
                    vis: None,
                    item_kind: Function(
                        Function {
                            extern_: Some(
                                "C",
                            ),
                            const_: false,
                            unsafe_: false,
                            ident: pong @ 95..99,
                            generic_params: None,
                            params: [],
                            return_type: Some(
                                Type {
                                    modifier: None,
                                    mutable: false,
                                    path: [
                                        Segment {
                                            ident: usize @ 105..110,
                                            generics: None,
                                            span: Span {
                                                lo: 105,
                                                hi: 110,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        lo: 105,
                                        hi: 110,
                                    },
                                },
                            ),
                            body: None,
                            span: Span {
                                lo: 81,
                                hi: 111,
                            },
                        },
                    ),
                    span: Span {
                        lo: 81,
                        hi: 111,
                    },
                },
            ],
            span: Span {
                lo: 0,
                hi: 111,
            },
        },
    ),
    [],
)
